--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,102 @@
 /* user-defined styles here */
+/* global mobile styles */
+:root{
+    --mainColor: #f6f4d2;
+    --secondColor: #d4e09b;
+    --mainTextColor: #283d3b;
+    --secondTextColor: #a44a3f;
+    /* font family */
+    --MainFontstack:'Josefin Sans', sans-serif; 
+    --secondFontStack: 'Kanit', sans-serif;
+}
+body{
+    background-color: var(--mainColor);
+    color:var(--mainTextColor);
+    font-family: var(--MainFontstack);
+}
+
+
+.container{
+    max-width: 1180px;
+    margin: 0 auto;
+}
+header{
+    background-color: var(--secondColor);
+
+}
+.page-title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0rem 2rem 2rem;
+}
+h1{
+    font-family: var(--secondFontStack);
+    color: var(--secondTextColor);
+    font-size: 4rem;
+    line-height: 4rem;
+}
+.youtube-link{
+    max-width: 70vw;
+}
+
+.image-spread{
+    padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.image-spread img{
+    width: 15rem;
+    max-width: 45vw;
+    padding: 0.5rem;
+}
+.image-spread p{
+    text-align: center;
+    flex-basis: 63%;
+    font-size: 3rem;
+}
+
+.rating-aspects section{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+}
+.rating-aspects section>p:first-of-type{
+    flex-basis: calc(50% - 2rem);
+}
+h3{
+    color: var(--secondTextColor);
+}
+
+.blog-writeup{
+    margin: 1rem auto;
+    padding: 1rem;
+    text-align: center;
+}
+.fas{
+    font-size: 6rem;
+    color: var(--mainTextColor);
+}
+
+footer{
+    background-color: var(--secondColor);
+    padding: 2rem 0 1rem;
+}
+
+@media(min-width:700px){
+
+    .image-spread p{
+        flex-basis: 20%;
+    }
+    .rating-aspects section{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
