--- a/css/styles.css
+++ b/css/styles.css
@@ -13,15 +13,18 @@ body{
     background-color: var(--mainColor);
     color:var(--mainTextColor);
     font-family: var(--MainFontstack);
+    overflow-x: hidden;
 }
 
 
 .container{
     max-width: 1180px;
     margin: 0 auto;
+    
 }
 header{
     background-color: var(--secondColor);
+    
 }
 nav{
     background-color: var(--mainColor);
@@ -32,6 +35,8 @@ nav{
 nav li{
     list-style: none;
     margin: 0 0 0 2rem;
+    padding: 1rem 0;
+    border-bottom: 1px solid var(--secondTextColor);
 }
 nav a{
     text-decoration: none;
@@ -39,10 +44,14 @@ nav a{
     color: var(--mainTextColor);
     font-size: 2rem;
 }
+nav a:hover{
+    color: var(--secondTextColor);
+}
 body .not-visible{
-    visibility: hidden; 
+    visibility: hidden;
     height: 0; 
     left: 100%; 
+    transition: left 0.3s, visibility 0.1s;
 }
 
 
@@ -52,12 +61,16 @@ body .not-visible{
     font-size: 2.5rem;   
 }
 .product-list{
+    visibility: visible;
     position: absolute;
     background-color: var(--mainColor);
     top:calc(100% - 1rem);
     z-index: 10;
     left: 0;
     right: 0;
+    transition: all 0.3s,  visibility 0.1s;
+    
+    
 }
 
 .dropdowntitle:hover{
@@ -154,6 +167,7 @@ footer{
     .dropdowntitle{
         height: initial!important;
         visibility: initial!important;
+        opacity: 1!important;
         display: flex;
         align-items: center;
         justify-content: space-between;
