--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,12 @@ nav{
     padding: 1rem 0 0;
     border-radius: 0 0 1rem 1rem;
 }
-nav li{
+nav ul{
+    padding: 2rem;
+}
+nav ul li{
     list-style: none;
-    margin: 0 0 0 2rem;
+    margin: 0 0 0 0;
     padding: 1rem 0;
     border-bottom: 1px solid var(--secondTextColor);
 }
@@ -83,6 +86,33 @@ body .not-visible{
     color: var(--secondTextColor);
 }
 
+
+form{
+    display: flex;
+    font-size: 2rem;
+    margin: 1rem 2rem 0;
+}
+input:focus{
+    outline: none;
+}
+button:focus{
+    outline: none;
+}
+form input{
+    padding:0.2rem 0.5rem;
+    border-radius: 1rem 0 0 1rem;
+    border-color: var(--secondTextColor);
+    background-color: var(--mainColor);
+}
+form button{
+    border-radius: 0 1rem 1rem 0;
+    border-color: var(--secondTextColor);
+    background-color: var(--mainColor);
+}
+form button i{
+   vertical-align: middle;
+   color: var(--secondTextColor);
+}
 
 
 
